<resources>
    <string name="app_name">Shift Manager</string>

    <!--NAV DRAWER STRINGS-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Shift Manager</string>
    <string name="nav_header_subtitle">contact@shiftmanager.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--NAV DRAWER MENU STRINGS-->
    <string name="menu_home">Home</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_templates">Templates</string>
    <string name="menu_preferences">Preferences</string>

    <!--CALENDAR STRINGS-->
    <string name="event_title">Events | %1$s</string>
    <string name="event_not_found">No Shifts Found</string>
    <string name="event_add_button">Add Event</string>

    <!--CALENDAR HEADER STRINGS-->
    <string name="calendar_header_title">%1$s %2$s</string>
    <string name="calendar_legend_monday">mon</string>
    <string name="calendar_legend_tuesday">tue</string>
    <string name="calendar_legend_wednesday">wed</string>
    <string name="calendar_legend_thursday">thu</string>
    <string name="calendar_legend_friday">fri</string>
    <string name="calendar_legend_saturday">sat</string>
    <string name="calendar_legend_sunday">sun</string>

    <!--ADD EVENT STRINGS-->
    <string name="title_activity_add_event">Add Event</string>
    <string name="add_event_title">Add an event</string>
    <string name="add_event_help">Click on each value to change it</string>
    <string name="add_event_details_header">Event Details</string>
    <string name="add_event_all_day">All Day?</string>
    <string name="add_event_type">Event Type</string>
    <string name="add_event_date">Event Date</string>
    <string name="add_event_start">Start Time</string>
    <string name="add_event_end">End Time</string>
    <string name="add_event_submit">Add Event</string>
    <string name="add_event_breaks_title">Break Details</string>
    <string name="add_event_add_break">Add Break</string>
    <string name="add_event_template_name">Template Name</string>
    <string name="add_break_is_paid">Is Paid?</string>
    <string name="add_break_start_time">Break Start</string>
    <string name="add_break_End_time">Break End</string>

    <!--CREATE EVENT TEMPLATE STRINGS-->
    <string name="create_event_template_title">Create an event template</string>
    <string name="create_event_template_submit">Create Template</string>

    <!--TEMPLATE STRINGS-->
    <string name="template_title">Event Templates</string>
    <string name="template_not_found">No Templates Found</string>

    <!--EVENT STRINGS-->
    <string name="event_time">%1$s - %2$s</string>
    <string name="event_type">%1$s (%2$s)</string>
    <string name="event_item_title">%1$s | %2$s - %3$s</string>

    <!--SETTINGS STRINGS-->
    <string name="prefs_dark_theme_summary">Enable or disable dark theme</string>
    <string name="prefs_dark_theme_title">Enable Dark Theme</string>
    <string name="title_activity_preference">Preferences</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>
