<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/legendLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="?surface"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:weightSum="7">

    <TextView
        style="?attr/calendarLegend"
        android:text="@string/calendar_legend_monday" />

    <TextView
        style="?attr/calendarLegend"
        android:text="@string/calendar_legend_tuesday" />

    <TextView
        style="?attr/calendarLegend"
        android:text="@string/calendar_legend_wednesday" />

    <TextView
        style="?attr/calendarLegend"
        android:text="@string/calendar_legend_thursday" />

    <TextView
        style="?attr/calendarLegend"
        android:text="@string/calendar_legend_friday" />

    <TextView
        style="?attr/calendarLegend"
        android:text="@string/calendar_legend_saturday" />

    <TextView
        style="?attr/calendarLegend"
        android:text="@string/calendar_legend_sunday" />

</LinearLayout>